fix(v1.10.0): remove strange gradient on collapsed paragraphs
In some cases, the paragraphs in a block being collapsed resulted in a
gradient showing next to the edit button.  We are unsure what purpose
this fulfilled, so we hid it.

--- a/css/layout-builder.css
+++ b/css/layout-builder.css
@@ -319,3 +319,8 @@ div[data-drupal-selector="edit-block-form"] {
 th.field-label {
   z-index: 105;
 }
+
+/* A gradient was displaying on certain states.  This removes it. */
+.has-multiple-fields-remove-button .js .paragraphs-collapsed-description:after {
+  display: none;
+}
